# nutrigeneengine

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
scripts/: generate_full_report.py
src/nutrigeneengine/: __init__.py  pdf_generator.py  risk_scorer.py  schema_handler.py  utils.py  visualizer.py
tests/: __init__.py  test_risk_scorer.py  test_schema_handler.py
